<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/app_background"
    tools:context=".ui.edit.EditProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="@string/product_details"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textColor="@color/pink_app"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number"
                style="@style/text_view_style"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/product_number_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/number_hint"
                    android:inputType="number"
                    android:textColor="@color/blue_app"
                    style="@style/edit_text_style"/>

                <ImageButton
                    android:id="@+id/scan_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:elevation="1dp"
                    android:src="@drawable/ic_barcode_scanner"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name"
                style="@style/text_view_style"/>

            <EditText
                android:id="@+id/product_name_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/name_hint"
                style="@style/edit_text_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/price"
                style="@style/text_view_style"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/product_price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0.0"
                    android:inputType="numberDecimal"
                    style="@style/edit_text_style"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/price_unit"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"
                style="@style/text_view_style"/>

            <Spinner
                android:id="@+id/product_category_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/scanner_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone">

        <me.dm7.barcodescanner.zxing.ZXingScannerView
            android:id="@+id/qr_scanner_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_cancel"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>