<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_grocery"
        android:alpha="0.9"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:padding="16dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_product_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginEnd="8dp"
            android:drawableTop="@drawable/img_add"
            android:text="@string/add_product"
            style="@style/button_style"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_product_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/img_edit"
            android:text="@string/edit_product"
            style="@style/button_style"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/find_product_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginEnd="8dp"
            android:drawableTop="@drawable/img_search"
            android:text="@string/find_product"
            style="@style/button_style"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inventory_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/img_inventory"
            android:text="@string/view_inventory"
            style="@style/button_style"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>